Fixed formatting issues with grid gap and country name

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ h4 {
 
 .country__info {
   display: grid;
-  column-gap: min(1%, 8rem);
+  column-gap: min(2%, 8rem);
 
   margin-top: 4rem;
 }
@@ -147,6 +147,7 @@ h4 {
   .country__info--name {
     grid-column: 2/3;
     grid-row: 2/3;
+    text-align: left;
   }
   .group-1 {
     grid-column: 2/3;
